--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,22 @@ repositories {
 dependencies {
 //    def groovyComponents = ['groovy', 'groovy-ant', 'groovy-sql', 'groovy-test']
 //  testCompile groovyComponents.collect { "org.codehaus.groovy:$it:2.4.3" }
+
 //  testCompile 'com.h2database:h2:1.3.168'
 //  testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
-    implementation 'com.google.guava:guava:30.1.1-jre'
-    testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
-    testImplementation 'junit:junit:4.13.2'
+//    implementation 'com.google.guava:guava:30.1.1-jre'
+//    testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
+//    testImplementation 'junit:junit:4.13.2'
 
+    implementation 'org.codehaus.groovy:groovy:3.0.8'
+    implementation 'org.codehaus.groovy:groovy-ant:3.0.8'
+    implementation 'org.codehaus.groovy:groovy-sql:3.0.8'
+    implementation 'org.codehaus.groovy:groovy-test:3.0.8'
+    implementation 'com.h2database:h2:1.4.200'
+    implementation 'com.google.guava:guava:31.0.1-jre'
+    implementation 'org.spockframework:spock-core:2.1-M2-groovy-3.0'
+    implementation 'junit:junit:4.13.2'
+    implementation 'org.codehaus.groovy:groovy-xml:3.0.8'
 }
 
 task removeSolutions {
